migrate to jdk25